--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
 }
 
 .slay{
+    width: 1400px;
+    height: 150px;
+    background-color: #7b917b;
     display: flex;
-    align-items: row;
-    justify-content: space-between;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    gap: 50px;
 }
