--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@
 .enot{
     border-radius: 50px;
 }
+.my{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
