--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
     margin: 0;
     padding: 0;
 }
-
+body{
+    width: 1400px;
+    height: 500px;
+    background-color: #6c7156;
+}
 .slay{
     width: 1400px;
     height: 150px;
@@ -17,8 +21,12 @@
     border-radius: 50px;
 }
 .my{
+    width: 500px;
+    height: 200px;
+    background-color: whitesmoke;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    text-align: center
 }
