--- a/style.css
+++ b/style.css
@@ -40,3 +40,10 @@ body{
     flex-direction: column;
     text-align: center   
 }
+.icons{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+gap: 20px;
+    
+}
