--- a/style.css
+++ b/style.css
@@ -41,9 +41,11 @@ body{
     text-align: center   
 }
 .icons{
+    width: 1400px;
+    height: 50px;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: row;
-gap: 20px;
-    
+     gap: 20px;
 }
