--- a/style.css
+++ b/style.css
@@ -23,10 +23,23 @@ body{
 .enot{
     border-radius: 50px;
 }
-.my{
+.o1{
     width: 1200px;
     height: 300px;
     background-color: whitesmoke;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.o{
+    width: 300px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+}
+.my{
+
+ 
     display: flex;
     align-items: center;
     justify-content: center;
