--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body{
     border-right:200px solid rgb(255, 255, 255);
     border-left:200px solid rgb(255, 255, 255);
     width: 50%;
-    width: 1200px;
+    width: auto;
     font-family: "El Messiri" , serif;
     font-size: 18px;
 
 }
 .slay{
-    width: 1200px;
+    width: auto;
     height: 150px;
     background-color: #7b917b;
     display: flex;
@@ -37,9 +37,10 @@ body{
 }
 .enot{
     border-radius: 50px;
+
 }
 .o1{
-    width: 1200px;
+    width: auto;
     height: 300px;
     background-color: whitesmoke;
     display: flex;
@@ -63,7 +64,7 @@ body{
     gap: 20px;
 }
 .my2{
-    width: 1200px;
+    width: auto;
     height: 200px;
     background-color: whitesmoke;
     display: flex;
@@ -79,7 +80,7 @@ body{
     align-items: center;
     justify-content: center;
     gap: 20px;
-    width: 1200px;
+    width: auto;
     height: 160px;
     background-color: #7b917b;
 }
@@ -90,7 +91,7 @@ body{
     text-align: center;
 }
 .icons{
-    width: 1200px;
+    width:auto;
     height: 50px;
     display: flex;
     align-items: center;
